# cadar

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: 01_hello_world.cada  01_hello_world.stdout  02_control_flow.cada  02_control_flow.stdout  03_packages_and_contracts.cada  04_types_and_ranges.cada  04_types_and_ranges.stdout  05_body_only_package.cada  06_arrays.cada  06_arrays.stdout  07_record_aggregates.cada  08_named_args_and_defaults.cada  08_named_args_and_defaults.stdout  09_asserts.cada  09_asserts.stdout  10_loop_annotations.cada  10_loop_annotations.stdout  11_dataflow_contracts.cada  12_package_state.cada  13_private_package_helpers.cada  14_nested_block_locals.cada  15_float_and_character_literals.cada  15_float_and_character_literals.stdout  16_loop_control.cada  16_loop_control.stdout  17_arrays_of_records.cada  18_matrix_trace.cada  19_inventory_report.cada  19_inventory_report.stdout  20_stateful_contracts.cada  20_stateful_contracts.stdout  21_alert_pipeline.cada  21_alert_pipeline.stdout  22_private_package_sections.cada  23_import_aliases.cada  23_import_aliases.stdout  24_exceptions.cada  25_string_slices.cada  README.md
src/: ast.rs  diagnostic.rs  lexer.rs  lib.rs  lowering.rs  main.rs  parser.rs  sema.rs
tests/: cli.rs  gnat.rs
